# osint-engine

./: .actrc  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.jsonc  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TO-DO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
docs/adr/: 0001-dataclasses-as-entity-base.md  0002-manual-entity-base-class.md  0003-uuid5-over-uuid4-for-entity-identity.md  0004-idtype-co-typevar-for-covariant-id-typing.md  0005-brasilapi-as-mvp-cnpj-data-source.md  0006-manual-dependency-injection-over-fastapi-di.md  0007-in-memory-persistence-as-mvp-boundary.md  0008-stateless-jwt-for-authentication.md  0009-argon2id-via-passlib-for-password-hashing.md  0010-identity-fields-subset-for-entity-id-derivation.md  0011-edge-generic-over-sourceid-and-targetid.md  0012-self-loop-and-graph-consistency-at-construction.md  0013-hypothesis-for-property-based-graph-id-stability.md  0014-use-case-stamps-revision-fetched-at.md  0015-fetcher-returns-entity-revision.md  0016-companyownscompany-as-concrete-edge-over-generic-ownership.md  0017-identity-normalization-via-calculate-id-override.md  0018-fail-fast-error-code-contract-across-layers.md  0019-portal-transparencia-as-cnep-ceis-sanctions-source.md  0020-role-guard-for-per-route-authorization.md  0021-fastapi-throttle-over-slowapi-for-rate-limiting.md
scripts/: __main__.py  refresh_api_responses.py  refresh_test_source_responses.py
src/corporate_risk_engine/domain/entities/: company.py  enterprise.py  partner.py  risk_assesment.py
src/corporate_risk_engine/domain/services/: risk_assessor.py
src/corporate_risk_engine/domain/value_objects/: cnae.py  money.py  public_tender.py  risk_assesment.py  risk_factor.py
src/osint_engine/: __main__.py
src/osint_engine/application/auth/: external_credential.py  user.py
src/osint_engine/application/contracts/: uow.py  use_case.py
src/osint_engine/application/contracts/fetchers/: cep_fetcher.py  cnep_fetcher.py  cnpj_fetcher.py
src/osint_engine/application/contracts/hashers/: auth_hasher.py  password_hasher.py
src/osint_engine/application/contracts/repositories/: edge_repository.py  entity_repository.py  external_credential_repository.py  graph_repository.py  node_repository.py  user_repository.py
src/osint_engine/application/contracts/services/: jwt_service.py
src/osint_engine/application/errors/: application_error.py  auth_error.py  external_credential_error.py  revision_error.py
src/osint_engine/application/revision/: entity_revision.py
src/osint_engine/config/: container.py  croot.py  settings.py
src/osint_engine/domain/: entity_snapshot.py
src/osint_engine/domain/entities/: company.py  entity.py  partner.py
src/osint_engine/domain/errors/: domain_error.py  edge_error.py  entity_error.py  graph_error.py  node_error.py
src/osint_engine/domain/value_objects/: address.py  cnae.py  entity_namespace.py  graph.py  normalization.py  sanction.py
src/osint_engine/infrastructure/errors/: auth_error.py  data_source_error.py  fetcher_error.py  infrastructure_error.py  token_error.py  uow_error.py
src/osint_engine/infrastructure/fetchers/: brasilapi_fetcher.py
src/osint_engine/infrastructure/hashers/: argon2_password_hasher.py  password_hasher.py
src/osint_engine/infrastructure/services/: pyjwt_service.py
src/osint_engine/infrastructure/sources/: payload.py
src/osint_engine/interface/: sanitizers.py
src/osint_engine/interface/errors/: authorization_error.py  interface_error.py  rate_limit_error.py  sanitization_error.py
src/osint_engine/interface/http/: app.py  http_server.py
src/osint_engine/observability/: context.py  logging.py
src/osint_engine/observability/middlewares/: http_middleware.py
tests/: conftest.py  fakes.py
tests/data/: brasilapi.py
tests/fakes/: __init__.py  domain.py  fetchers.py
tests/test_application/: conftest.py
tests/test_application/test_auth/: test_external_credential.py
tests/test_application/test_errors/: test_application_error.py
tests/test_application/test_revision/: test_entity_revision.py
tests/test_application/test_revision/test_policies/: test_revision_merge_policy.py  test_revision_selection_policy.py
tests/test_application/test_use_cases/: test_authenticate_user.py  test_expand_by_cnep.py  test_expand_by_cnpj.py  test_save_credential.py
tests/test_config/: test_croot.py
tests/test_domain/: test_edge.py  test_entity.py  test_entity_namespace.py  test_graph.py  test_risk_assesment.py
tests/test_domain/test_bases/: test_edge.py  test_entity.py  test_graph.py
tests/test_domain/test_entities/test_nodes/: test_address.py  test_company.py  test_person.py  test_sanction.py
tests/test_domain/test_errors/: test_domain_error.py  test_entity_error.py
tests/test_domain/test_value_objects/: test_normalization.py
tests/test_error/: test_domain_error.py
tests/test_infrastructure/test_errors/: test_data_source_error.py  test_infrastructure_error.py
tests/test_infrastructure/test_hashers/: test_argon2_password_hasher.py
tests/test_infrastructure/test_persistence/test_mem/: test_mem_seeder.py  test_mem_storage.py  test_mem_storage_snapshot.py  test_mem_uow.py
tests/test_infrastructure/test_services/: test_pyjwt_service.py
tests/test_infrastructure/test_sources/: _data.py  conftest.py  test_payload.py
tests/test_infrastructure/test_sources/test_brasilapi/: conftest.py  test_brasilapi_fetcher.py  test_brasilapi_mapper.py
tests/test_interface/: test_sanitizers.py
tests/test_interface/test_errors/: test_interface_error.py
tests/test_interface/test_http/: test_http_status_mapper.py
tests/test_interface/test_http/test_fastapi/: conftest.py  test_error_handler.py  test_fastapi.py
tests/test_interface/test_http/test_presenters/: test_edge_presenter.py  test_graph_presenter.py  test_node_presenter.py
tests/test_interface/test_http/test_schemas/: test_edge_schema.py  test_error_schema.py  test_node_schema.py
tests/test_observability/test_structlog/: test_config.py
(+107 files in other folders)
