[project]
name = "osint-engine"
version = "1.6.0"
description = "Entity relationship graph engine that expands identifiers into a fully traceable network of connections sourced exclusively from official public records"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Angelito Chagas", email = "chagasangelito@gmail.com" }]
keywords = ["brasilapi", "brazil", "cnpj", "entity-resolution", "graph", "osint"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi>=0.136",
  "fastapi-throttle>=0.1.8",
  "httpx2>=2.4",
  "pydantic>=2.13",
  "pyjwt>=2.13.0",
  "python-multipart>=0.0.32",
  "structlog>=25.5",
  "typer>=0.26",
  "uvicorn>=0.48",
]

[project.urls]
Repository = "https://github.com/geldois/osint-engine"

[dependency-groups]
dev = [
  "basedpyright>=1.39",
  "graphifyy>=0.9.22",
  "hypothesis>=6.156.1",
  "mutmut>=3.6.0",
  "pre-commit>=4.6",
  "pytest>=9.0",
  "pytest-asyncio>=1.4",
  "pytest-cov>=7.1.0",
  "pytest-language-server>=0.23",
  "python-semantic-release>=10.5",
  "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonPlatform = "All"
reportMissingTypeStubs = "none"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_engine"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
# mutmut's working copy under mutants/ duplicates every module path (including
# tests/conftest.py); without this, a stray mutants/ dir left over from an
# interrupted `mutmut run` makes plain `pytest` collection fail with
# ImportPathMismatchError instead of just ignoring the mutation workspace.
# Includes pytest's own defaults since setting this option replaces rather
# than extends them.
norecursedirs = [
  "*.egg",
  ".*",
  "_darcs",
  "build",
  "CVS",
  "dist",
  "mutants",
  "node_modules",
  "venv",
  "{arch}",
]

[tool.pytest-language-server]
exclude = ["build/**", "dist/**", ".tox/**"]

[tool.mutmut]
source_paths = ["src/"]
pytest_add_cli_args_test_selection = ["tests/"]
# EntityNAMESPACE defines __init__ on an Enum member; mutmut's trampoline
# instrumentation collides with Enum's __set_name__/__init__ metaclass
# machinery on this file (KeyError: '_mutmut_orig'), so it is excluded.
do_not_mutate = ["src/osint_engine/domain/value_objects/entity_namespace.py"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D",
  "D100",
  "D101",
  "D203",
  "D212",
  "FURB157",
  "ISC001",
  "RUF012"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["PLR0913", "PLR2004", "S101", "S105", "S106", "SLF001"]
"scripts/*.py" = ["INP001", "T201"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
parse_squash_commits = true
ignore_merge_commits = true
